:bug: Fixed a bug where names containing an ampersand would be cut off in the URL (also changing back-end code accordingly)

--- a/src/components/sass/profile/_profile.scss
+++ b/src/components/sass/profile/_profile.scss
@@ -2,7 +2,7 @@
     overflow-x: hidden;
 
     .top-row {
-        height: 480px;
+        min-height: 480px;
         margin-bottom: 24px;
 
         .card {
